--- a/index.html
+++ b/index.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css/" href="reset">
-	<link rel="stylesheet" type="text/css/" href="style">
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
 	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-
 	<script src="./assets/javascript/game.js"></script>
 
 	<title>Crystal Game</title>
 </head>
 <body>
+	<div>
+    <h1 class="myTitle">The Rick and Morty game.</h1>
+    </div>
 	<div>Wins
- 	<div class="Wins"></div>
+ 	<span class="Wins"></span>
  	</div>
  	<div>Losses
- 	<div class="Losses"> </div>
+ 	<span class="Losses"></span>
  	</div>
  	<div> Total Number
- 		<div class="totalNumber"></div>
+ 		<span class="totalNumber"></span>
  	</div>
 	<div> Winning Number 
-		<div class="winningNumber"></div>
+		<span class="winningNumber"></span>
 	</div>
 
+
+			<br>
+			<br>
+				<div class="col-md-2 col-md-offset-2">
+					<img id="firstClick" src="http://static.tvtropes.org/pmwiki/pub/images/snuffles_helmet.jpg" alt="Gem One" height="150" width="150">
+				</div>
+				<div class="col-md-2">
+					<img id="secondClick" src="https://upload.wikimedia.org/wikipedia/en/d/d7/Rick_and_Morty_characters_-_Morty_Smith.jpg" alt="Gem Two" height="150" width="150">
+				</div>
+				<div class="col-md-2">
+					<img id="thirdClick" src="https://i.pinimg.com/originals/01/5c/ac/015cac29f9586f03247a807cc54f8f13.png" alt="Gem Three" height="150" width="150">
+				</div>
+				<div class="col-md-2">
+					<img id="fourthClick" src="https://res.cloudinary.com/teepublic/image/private/s--HEgbz-h5--/t_Preview/b_rgb:ffffff,c_limit,f_jpg,h_313,q_90,w_313/v1502340950/production/designs/1807634_1.jpg" alt="Gem Four" height="150" width="150">
+				</div>
+			</div>
+
+		</div>
+<!-- 
 <img id="firstClick" src="http://static.tvtropes.org/pmwiki/pub/images/snuffles_helmet.jpg" alt="Gem One" height="150" width="150">
 <img id="secondClick" src="https://upload.wikimedia.org/wikipedia/en/d/d7/Rick_and_Morty_characters_-_Morty_Smith.jpg" alt="Gem Two" height="150" width="150">
 <img id="thirdClick" src="https://i.pinimg.com/originals/01/5c/ac/015cac29f9586f03247a807cc54f8f13.png" alt="Gem Three" height="150" width="150">
 <img id="fourthClick" src="https://res.cloudinary.com/teepublic/image/private/s--HEgbz-h5--/t_Preview/b_rgb:ffffff,c_limit,f_jpg,h_313,q_90,w_313/v1502340950/production/designs/1807634_1.jpg" alt="Gem Four" height="150" width="150">
-
+ -->
 </body>
 </html>
