--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 
 	<title>Crystal Game</title>
 </head>
-<body>
+
+<div id="instructions">
+<p>You will win if your total score matches the random number from the beginning of the game.</p>
+<p>You will lose if your score goes above the random number. </p>
+<p>The game restarts whenever you wins or lose.</p>
+<h3><p>When the game begins again, you should see a new random number. 
+Also, Rick and Morty characters will have four new hidden values.</p></h3> 
+<h3><p>Of course, your score (and score counter) will reset to zero.</p></h3>
+</div>
+
+<body background="https://cdn.shopify.com/s/files/1/1222/3190/products/i_am_mr_meeseeks_rick_and_morty_tv_show_tshirt_in_India_by_silly_punter_4adada1e-1912-47dd-865b-e78ce7608415.jpg?v=1504446230">
 	<div>
     <h1 class="myTitle">The Rick and Morty game.</h1>
     </div>
